<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".agregarInquilino.AgregarInquilino">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivPhoto"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:src="@drawable/image_foto" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextImputStyle"
                android:orientation="horizontal">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1">
                    <EditText
                        android:id="@+id/etDNI"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:textColorHint="@color/colorAccent"
                        android:hint="@string/sDni"
                        android:inputType="number"
                        android:maxLength="8"/>
                </com.google.android.material.textfield.TextInputLayout>
                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_photo_camera_black_24dp"
                    android:background="@android:color/transparent"
                    android:onClick="onClickTomarFoto"/>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                style="@style/TextImputStyle"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/etNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/sNombreUser"
                    android:inputType="textCapSentences"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                style="@style/TextImputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_marginRight="2dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2dp">
                    <EditText
                        android:id="@+id/etApellidoPat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/sApePat"
                        android:nextFocusUp="@id/etApellidoMat"
                        android:inputType="textCapSentences" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp">
                    <EditText
                        android:id="@+id/etApellidoMat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/sApeMat"
                        android:inputType="textCapSentences" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
<!--
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <EditText
                        android:id="@+id/codPais"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="+51"
                        android:maxLength="3"
                        android:inputType="number"
                        android:nextFocusUp="@id/etApellidoMat" />
                </com.google.android.material.textfield.TextInputLayout>
                -->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextImputStyle">
                    <EditText
                        android:id="@+id/etNumeroTelefono"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:maxLength="15"
                        android:hint="Número telefonico"
                        android:nextFocusUp="@id/etApellidoMat"
                        android:inputType="numberSigned" />
                </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextImputStyle">
                <EditText
                    android:id="@+id/etCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Correo electronico"
                    android:maxLength="50"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/s_num_c"
                    android:textStyle="bold"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spNumCuartos"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:entries="@array/dias"
                    android:spinnerMode="dropdown" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                style="@style/TextImputStyle"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/etPrecio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/sMensualidad"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView3"
                style="@style/TextImputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sfecha_i"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spDia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/dias"
                    android:spinnerMode="dialog" />

                <Spinner
                    android:id="@+id/spMes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/MesesInt"
                    android:spinnerMode="dialog" />

                <Spinner
                    android:id="@+id/spAnio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/Años"
                    android:spinnerMode="dialog" />
            </LinearLayout>

            <RadioGroup
                android:id="@+id/radioGrup"
                style="@style/TextImputStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checkedButton="@id/faltaCancelar"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbCancelo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:text="@string/srbCancelo" />

                <RadioButton
                    android:id="@+id/faltaCancelar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:text="@string/srbFaltaC" />
            </RadioGroup>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickCancel"
            android:layout_weight="1"
            android:text="@string/sBtCancelar"
            android:textStyle="bold"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickAgregar"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/sBtAgregar" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>