<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".verUsuario.VerUsuario">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/vuBtCacelar"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/vuIvEstado"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_mood_black_24dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp">
                    <TableRow>
                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="start"
                            android:text="@string/s_datos_usuario"
                            android:textColor="@color/colorPrimary"/>
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/tableRow">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="DNI: "
                            android:textColor="@color/primaryTextColor"/>

                        <TextView
                            android:id="@+id/tvDNI"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="right" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/tableRow">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Nombres:"
                            android:textColor="@color/primaryTextColor"/>

                        <TextView
                            android:id="@+id/tvNombre"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/tableRow">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/sApePat"
                            android:textColor="@color/primaryTextColor"/>

                        <TextView
                            android:id="@+id/tvApellidoPat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        style="@style/tableRow">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/sApeMat"
                            android:textColor="@color/primaryTextColor" />

                        <TextView
                            android:id="@+id/tvApellidoMat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end" />
                    </TableRow>
                </TableLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/mCardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_weight="2"
                            android:text="ALQUILER"
                            android:textStyle="bold" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="CUARTO" />

                        <TextView
                            android:id="@+id/tvCuarto"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:visibility="visible" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="FECHA DE PAGO: " />

                        <TextView
                            android:id="@+id/tvFechaDePago"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end" />

                    </TableRow>

                    <TableRow>

                        <TextView
                            android:id="@+id/tvFecha0"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="INGRESO: "
                            android:visibility="visible" />

                        <TextView
                            android:id="@+id/tvFecha1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:visibility="visible" />
                    </TableRow>
                </TableLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/mCardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp">

                    <TableRow>

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_marginTop="8dp"
                            android:layout_span="2"
                            android:text="MENSUALIDAD"
                            android:textStyle="bold" />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="MONTO A PAGAR: " />

                        <TextView
                            android:id="@+id/tvPago"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="end" />
                    </TableRow>
                </TableLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/vuBtCacelar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:onClick="onClickPagarMensualidad"
        android:background="@drawable/roud_borders"
        android:text="realizar pago"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>